grammar.txt
program        → statement* EOF ;

statement      → expression ;

expression     → equality ;

equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" | "and" | "or" ) term )* ;

term           → factor ( ( "-" | "+" ) factor )* ;
factor         → exponents ( ( "/" | "*" ) exponents )* ;
exponents      → unary ( "^" unary)* ;
unary          → ( "not" | "-" ) unary
               | primary ;
primary        → NUMBER | STRING | "true" | "false" | "null"
               | "(" expression ")" ;
